# dog-aging-ingest

./: .gitignore  Jenkinsfile  README.md  build.sbt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-publish-master.yaml  (+3 more)
hack/: convert-local-dir-to-tsv.py  convert-output-to-tsv.py  manual_refresh.sh  run_in_virtualenv.sh
orchestration/: Chart.yaml  dev_refresh.yaml  mypy.ini  pyproject.toml  repositories.py  run_dev_refresh.sh  run_local.sh  values.schema.json  values.yaml  workspace.yaml
orchestration/dap_orchestration/: firecloud_solids.py  pipelines.py  resources.py  solids.py  tsv_convert.py  types.py  typing.py
orchestration/dap_orchestration/config/: __init__.py
orchestration/dap_orchestration/config/resources/api_token/: global.yaml
orchestration/dap_orchestration/config/resources/dataflow_beam_runner/: dev.yaml  global.yaml  prod.yaml
orchestration/dap_orchestration/config/resources/gcs_pickle_io_manager/: dev.yaml  prod.yaml
orchestration/dap_orchestration/config/resources/k8s_dataflow_beam_runner/: dev.yaml  dev_extract.yaml  dev_transform.yaml  global.yaml  prod_extract.yaml  prod_transform.yaml
orchestration/dap_orchestration/config/resources/local_beam_runner/: dev.yaml  global.yaml  prod.yaml
orchestration/dap_orchestration/repositories/: base_repositories.py  common.py  dev_repositories.py  local_repositories.py  prod_repositories.py
orchestration/dap_orchestration/tests/: test_pipelines.py  test_solids.py
orchestration/example-values/: no-version.yaml
orchestration/scripts/: convert_mapping_to_schema.py  load_data_to_dataset.py
orchestration/templates/: cron-workflow.yaml  ingest-dog-aging.yaml
project/: plugins.sbt
scripts/: convert_mapping_to_schema.py  load_data_to_dataset.py
(+432 files in other folders)
