[tool.poetry]
name = "dap_orchestration"
version = "0.0.1"
description = "This is the dagster orchestration project for DAP pipelines"
authors = ["Quazi Hoque <qhoque@broadinstitute.org>"]

[tool.poetry.dependencies]
python = "~3.9"
dagster = "^0.12.12"
dagster-gcp = "^0.12.12"
dagster-k8s = "^0.12.12"
dagster-postgres = "^0.12.12"
gcsfs = "^2021.5.0"
broad-dagster-utils = "0.6.3"
dagit = "^0.12.12"
graphql-ws = "<0.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
flake8 = "^3.8.4"
mypy = "^0.812"
pre-commit = "^2.11.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core=^1.1.5"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
aggressive = 1
exclude = ".pytest_cache,__pycache__"
max_line_length = 120
